--- a/cpp/cpp.vcxproj
+++ b/cpp/cpp.vcxproj
@@ -154,7 +154,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="0027-remove-element.cpp" />
+    <ClCompile Include="0367-valid-perfect-square.cpp" />
     <ClCompile Include="0704-binary-search.cpp" />
+    <ClCompile Include="0977-squares-of-a-sorted-array.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
